retry/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  timeout: 1s
                  retry_policy:
                    retry_on: 5xx
                    num_retries: 3
                    per_try_timeout: 0.3s
                  cluster: service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: service
    type: STRICT_DNS
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1
                port_value: 80
